# ecobots

./: chatbot.py  dc_sdd036_i161.py  excel_parser.ipynb  mv_sdd328_i106.py  pyproject.toml
src/: intents.py  utils.py
