[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["kevin.yauy <kevin.yauy@chu-montpellier.fr>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.8.*"
streamlit = "^1.14.0"
streamlit-chat = "^0.0.2"
nltk = "^3.7"
tensorflow = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
